@@ -46,6 +46,7 @@ Changes from 4.3.x -> 4.4-alpha
 * xymond_rrd: Load hostnames and configuration earlier in the startup process
 * xymonnet: keep the services db open during entire run
 * xymond_history: rewrite file write section using posix instead of C
+* xymond_rrd: don't restat files and dirs on each message; only re-create on error
 
 
 Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
